# misaxx-analyzer

./: CMakeLists.txt  README.md
cmake/: misaxx-analyzer-config.cmake.in  misaxx-indexer-config.cmake.in  module_info.cpp.in  module_info.h.in
include/misaxx-analyzer/: module.h  module_interface.h
include/misaxx-analyzer/accessors/: attachment_index.h  misa_output.h
include/misaxx-analyzer/caches/: attachment_index_cache.h  misa_output_cache.h
include/misaxx-analyzer/descriptions/: attachment_index_description.h  misa_output_description.h
include/misaxx-analyzer/patterns/: attachment_index_pattern.h  misa_output_pattern.h
include/misaxx-indexer/: module.h  module_interface.h
include/misaxx-indexer/accessors/: attachment_index.h  misa_output.h  sqlite_orm.h
include/misaxx-indexer/caches/: attachment_index_cache.h  misa_output_cache.h  sqlite_orm_cache.h
include/misaxx-indexer/descriptions/: attachment_index_description.h  misa_output_description.h  misa_sqlite_description.h
include/misaxx-indexer/patterns/: attachment_index_pattern.h  misa_output_pattern.h  misa_sqlite_pattern.h
src/: main.cpp
src/misaxx-analyzer/: attachment_indexer_task.cpp  attachment_indexer_task.h  module.cpp  module_info.cpp  module_interface.cpp  schema_traversion_task.cpp  schema_traversion_task.h
src/misaxx-analyzer/accessors/: attachment_index.cpp  misa_output.cpp
src/misaxx-analyzer/caches/: attachment_index_cache.cpp  misa_output_cache.cpp
src/misaxx-analyzer/descriptions/: attachment_index_description.cpp  misa_output_description.cpp
src/misaxx-analyzer/patterns/: attachment_index_pattern.cpp  misa_output_pattern.cpp
src/misaxx-indexer/: attachment_indexer_task.cpp  attachment_indexer_task.h  module.cpp  module_interface.cpp  schema_traversion_task.cpp  schema_traversion_task.h
src/misaxx-indexer/accessors/: attachment_index.cpp  misa_output.cpp  sqlite_orm.cpp
src/misaxx-indexer/caches/: attachment_index_cache.cpp  misa_output_cache.cpp  sqlite_orm_cache.cpp
src/misaxx-indexer/descriptions/: attachment_index_description.cpp  misa_output_description.cpp  misa_sqlite_description.cpp
src/misaxx-indexer/patterns/: attachment_index_pattern.cpp  misa_output_pattern.cpp  misa_sqlite_pattern.cpp
